kubernetes/talos/deploy/printer/klipper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moonraker
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 7125
    protocol: TCP
    targetPort: http
  selector:
    app: klipper-stack
    release: klipper-stack
  type: ClusterIP
